<resources>
    <string name="app_name">Cross-platform demo</string>
    <string name="login_form_title">Login</string>
    <string name="create_user_title">Create new user</string>
    <string name="main_form_title">Cross-platform demo</string>

    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="login">login</string>
    <string name="create_user">create user</string>
    <string name="back">Back</string>
    <string name="some_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam eros, ultricies id viverra eu, laoreet sit amet purus. Aenean metus odio, rhoncus vitae pellentesque a, cursus ut nisi. Fusce bibendum at lorem eget elementum. Duis non mauris blandit, congue justo sed, placerat purus. Sed quis velit vel enim elementum sollicitudin. Nulla facilisi. In nec sem tellus. Nam ultrices sagittis metus ac pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
</resources>
